upload 6 and 7 anni

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
 </head>
 
 <body>
+  <div id="passwordDiv" class="password-overlay">
+    <div class="password-form">
+      <input type="password" id="passwordInput" placeholder="Mật mã tình yêu ??">
+      <button type="button" onclick="checkPassword()">Let's go</button>
+    </div>
+  </div>
   <main>
     <div class="main-content">
       <article class="portfolio active" data-page="portfolio">
@@ -139,11 +145,62 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
+                  <img src="./assets/images/6th_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">6th Anniversary</h3>
+
+                <p class="project-category">23:43 26/04/2024</p>
+
+              </a>
+            </li>
+            
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/7th_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">7th Anniversary</h3>
+
+                <p class="project-category">00:11 27/04/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/garden.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Garden 1</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
                   <img src="./assets/images/garden.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Garden</h3>
-
 
               </a>
             </li>
