--- a/index.html
+++ b/index.html
@@ -181,10 +181,30 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/garden.jpg" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/8th_anniversary.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Garden 1</h3>
+                <h3 class="project-title">8th Anniversary</h3>
+
+                <p class="project-category">20:37 28/04/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/9th_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">9th Anniversary</h3>
+
+                <p class="project-category">15:55 30/04/2024</p>
 
               </a>
             </li>
