--- a/index.html
+++ b/index.html
@@ -217,6 +217,42 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
+                  <img src="./assets/images/10th_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">10th Anniversary</h3>
+
+                <p class="project-category">20:46 02/05/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/11th_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">11th Anniversary</h3>
+
+                <p class="project-category">20:52 04/05/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
                   <img src="./assets/images/garden.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
