--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     </div>
   </div>
   <main>
+    <div class="left-img">
+      <img src="./assets/images/dang.png" alt="" class="thumbnail">
+      <p>Tống Hải Đăng</p>
+      <p>21 - 09 - 1997</p>
+      <p style="margin-bottom: 10px;">Nam Định</p>
+    </div>
     <div class="main-content">
       <article class="portfolio active" data-page="portfolio">
         <header>
@@ -37,12 +43,30 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/wedding.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/wedding01.jpg" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Wedding</h3>
+                <h3 class="project-title">Wedding 01</h3>
 
                 <p class="project-category">12:42 20/04/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/wedding02.jpg" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Wedding 02</h3>
+
+                <p class="project-category">20:14 17/05/2024</p>
 
               </a>
             </li>
@@ -265,7 +289,12 @@
         </section>
       </article>
     </div>
-
+    <div class="right-img">
+      <img src="./assets/images/hang.png" alt="" class="thumbnail">
+      <p>Đỗ Thị Minh Hằng</p>
+      <p>31 - 01 - 1997</p>
+      <p style="margin-bottom: 10px;">Thừa Thiên Huế</p>
+    </div>
   </main>
 
   <div id="myModal" class="modal">
