--- a/index.html
+++ b/index.html
@@ -79,6 +79,70 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
+                  <img src="./assets/images/cplinfo.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Couple information</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/cpllevel.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Couple Level</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/garden01.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Garden 01</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/garden02.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Garden 02</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
                   <img src="./assets/images/1st_anniversary.jpg" alt="orizon" loading="lazy">
                 </figure>
 
@@ -269,21 +333,7 @@
               </a>
             </li>
 
-            <li class="project-item  active">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/garden.jpg" alt="metaspark" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Garden</h3>
-
-              </a>
-            </li>
+            
 
           </ul>
         </section>
