--- a/index.html
+++ b/index.html
@@ -79,10 +79,26 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/cplinfo.jpg" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/cplinfo01.jpg" alt="metaspark" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Couple information</h3>
+                <h3 class="project-title">Couple information 01</h3>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/cplinfo02.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Couple information 02</h3>
 
               </a>
             </li>
@@ -329,6 +345,24 @@
                 <h3 class="project-title">11th Anniversary</h3>
 
                 <p class="project-category">20:52 04/05/2024</p>
+
+              </a>
+            </li>
+
+            <li class="project-item  active">
+              <a href="#">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/last_anniversary.jpg" alt="metaspark" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">The last Anniversary</h3>
+
+                <p class="project-category">20:35 12/06/2024</p>
 
               </a>
             </li>
