update open link when click on image

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+
   <div id="passwordDiv" class="password-overlay">
     <div class="password-form">
       <input type="password" id="passwordInput" placeholder="Mật mã tình yêu ??">
@@ -23,7 +24,7 @@
   </div>
   <main>
     <div class="left-img">
-      <img src="./assets/images/dang.png" alt="" class="thumbnail">
+      <img src="./assets/images/dang.png" alt="" class="thumbnail" id="myImage">
       <p>Tống Hải Đăng</p>
       <p>21 - 09 - 1997</p>
       <p style="margin-bottom: 10px;">Nam Định</p>
@@ -31,7 +32,10 @@
     <div class="main-content">
       <article class="portfolio active" data-page="portfolio">
         <header>
-          <h2 class="h2 article-title">tequila ♥ rozi</h2>
+          <div class="header-container">
+            <h2 class="h2 article-title">tequila ♥ rozi</h2>
+
+          </div>
         </header>
         <section class="projects">
           <ul class="project-list">
@@ -258,7 +262,7 @@
 
               </a>
             </li>
-            
+
             <li class="project-item  active">
               <a href="#">
 
@@ -367,7 +371,7 @@
               </a>
             </li>
 
-            
+
 
           </ul>
         </section>
